including a .gitignore file

--- a/index.html
+++ b/index.html
@@ -3,16 +3,11 @@
     <head>
         <title>Earth Orbit/Rotation Model</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF8">
-
-        <style type="text/css">
-            body{ background:#221d23; }
-        </style>
-
         <script type="text/javascript" src="./three.min.js"></script>
         <script type="text/javascript" src="./terra.js"></script>
     </head>
 
-    <body>
+    <body style="background:#000; overflow:hidden; margin:0">
         <script type="text/javascript">
 
             //drop a UTC timestamp in here, or else leave blank for "right now"
